--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.9.5",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "deck.gl": "^8.0.17",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-map-gl": "^5.2.3",
     "react-scripts": "3.4.0"
   },
   "scripts": {
